--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
+                
             </div>
         </div>
     </header>
+        <!-- Scrolling Text Announcement -->
+    <div class="scrolling-text-container">
+        <div class="scrolling-text">
+            <span><i class="fas fa-star"></i> Special Offer: Get 20% off on all web development projects this month!</span>
+            <span><i class="fas fa-bolt"></i> New: Mobile app development services now available</span>
+            <span><i class="fas fa-calendar-check"></i> Get beyond the browser Today for almost no cost!</span>
+            <span><i class="fas fa-trophy"></i> Award-winning digital solutions since 2015</span>
+            <!-- Duplicate for seamless looping -->
+            <span><i class="fas fa-star"></i> Special Offer: Get 20% off on all web development projects this month!</span>
+            <span><i class="fas fa-bolt"></i> New: Mobile app development services now available</span>
+            <span><i class="fas fa-calendar-check"></i> Get beyond the browser Today for almost no cost !</span>
+            <span><i class="fas fa-trophy"></i> Award-winning digital solutions since 2015</span>
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
