--- a/index.html
+++ b/index.html
@@ -2242,7 +2242,7 @@
                         <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="EduTech Platform">
                     </div>
                     <div class="project-content">
-                        <h3>EduTech Platform</h3>
+                        <h3>POLYMATH EDUCATION NETWORK</h3>
                         <p>Online learning platform providing access to quality education in remote areas of Cameroon and neighboring countries.</p>
                         <div class="project-meta">
                             <div class="project-status">
@@ -2258,11 +2258,11 @@
                         <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="AgriTech Solution">
                     </div>
                     <div class="project-content">
-                        <h3>AgriTech Solution</h3>
-                        <p>Mobile application connecting farmers to markets, weather information, and agricultural resources.</p>
+                        <h3>BUILDORA social</h3>
+                        <p>Mobile and web application connecting milions of people acros africa and beyond, connecting workers to employers stay tuned .</p>
                         <div class="project-meta">
                             <div class="project-status">
-                                <i class="fas fa-circle"></i> Planning
+                                <i class="fas fa-circle"></i> in progress
                             </div>
                             <span class="text-small">30% Complete</span>
                         </div>
@@ -3226,3 +3226,4 @@
     </script>
 </body>
 </html>
+
