--- a/index.html
+++ b/index.html
@@ -2188,6 +2188,27 @@
                         </div>
                     </div>
                 </div>
+                 <div class="team-member animate-in delay-2">
+                    <div class="member-image">
+                        <img src="P1.jpeg" alt="Bukuka Felix - Lead Developer">
+                    </div>
+                    <div class="member-info">
+                        <h3 class="member-name">Bukuka Felix</h3>
+                        <p class="member-role">Lead Developer</p>
+                        <p>Full-stack developer with expertise in modern web technologies. Builds scalable, high-performance applications.</p>
+                        <div class="member-social">
+                            <a href="https://linkedin.com" class="social-link" target="_blank">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="https://twitter.com" class="social-link" target="_blank">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="https://github.com" class="social-link" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="team-member animate-in delay-3">
                     <div class="member-image">
@@ -3228,5 +3249,6 @@
     </script>
 </body>
 </html>
+
 
 
