--- a/index.html
+++ b/index.html
@@ -2190,12 +2190,14 @@
                 </div>
                  <div class="team-member animate-in delay-2">
                     <div class="member-image">
-                        <img src="P1.jpeg" alt="Bukuka Felix - Lead Developer">
+                        <img src="fotso.jpeg" alt="Bukuka Felix - Lead Developer">
                     </div>
                     <div class="member-info">
-                        <h3 class="member-name">Bukuka Felix</h3>
-                        <p class="member-role">Lead Developer</p>
-                        <p>Full-stack developer with expertise in modern web technologies. Builds scalable, high-performance applications.</p>
+                        <h3 class="member-name">Fotso idris</h3>
+                        <p class="member-role">Graphic Designer</p>
+                        <p>A young, creative mind with a passion for bold visuals and clean design. 
+                            Brings ideas to life through eye-catching graphics and layouts across this website,
+                            blending creativity with modern trends to make the Stech Digital Ink brand stand out.</p>
                         <div class="member-social">
                             <a href="https://linkedin.com" class="social-link" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
@@ -3249,6 +3251,7 @@
     </script>
 </body>
 </html>
+
 
 
 
