--- a/index.html
+++ b/index.html
@@ -2093,7 +2093,7 @@
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#services" class="nav-link">Services</a></li>
                     <li><a href="#team" class="nav-link">Team</a></li>
-                    <li><a href="#projects" class="nav-link">Projects</a></li>
+                    <li><a href="betaprojects.html" class="nav-link">BETA Projects</a></li>
                     <li><a href="#participate" class="nav-link">Participate</a></li>
                     <li><a href="#partners" class="nav-link">Partners</a></li>
                 </ul>
@@ -3711,3 +3711,4 @@
     </script>
 </body>
 </html>
+
