--- a/betaprojects.html
+++ b/betaprojects.html
@@ -1995,20 +1995,20 @@
             },
             {
                 id: 'ai-vision',
-                title: 'AI Vision Pro',
-                description: 'Advanced computer vision platform that can analyze images and videos in real-time with 99.8% accuracy.',
+                title: 'Tile Calculator pro',
+                description: 'Professional tile estimation tool for precise project planning.',
                 status: 'beta',
                 category: 'ai',
-                testers: 342,
-                feedback: 1287,
-                version: '0.8.2',
-                launchDate: '2024-06-15',
+                testers: 30,
+                feedback: 20,
+                version: '1.0.2',
+                launchDate: '2026-01-03',
                 features: [
-                    'Real-time object detection',
-                    'Facial recognition',
+                    'Calculates exact tile requirements',
+                    'waste factor (5%, 10%, 15%, 20%)',
                     'Scene understanding',
-                    'Multi-language OCR',
-                    'Custom model training'
+                    'grout spacing in calculations',
+                    'Calculates number of cartons needed'
                 ],
                 requirements: [
                     'Modern browser with WebGL support',
@@ -2016,7 +2016,7 @@
                     'Webcam for live testing',
                     'Stable internet connection'
                 ],
-                projectFile: null,
+                projectFile: 'calculator.html',
                 liveDemo: false,
                 tags: ['ai', 'computer-vision', 'ml']
             },
@@ -2618,4 +2618,5 @@
         });
     </script>
 </body>
+
 </html>
