--- a/betaprojects.html
+++ b/betaprojects.html
@@ -2017,7 +2017,7 @@
                     'Stable internet connection'
                 ],
                 projectFile: 'calculator.html',
-                liveDemo: false,
+                liveDemo: true,
                 tags: ['ai', 'computer-vision', 'ml']
             },
             {
@@ -2620,3 +2620,4 @@
 </body>
 
 </html>
+
