--- a/index.html
+++ b/index.html
@@ -2239,7 +2239,7 @@
                 
                 <ul class="nav-links">
                     <li><a href="#home" class="nav-link active">Home</a></li>
-                    <li><a href="about.htm" class="nav-link">About</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="#services" class="nav-link">Services</a></li>
                     <li><a href="#team" class="nav-link">Team</a></li>
                     <li><a href="betaprojects.html" class="nav-link">BETA Projects</a></li>
@@ -3910,4 +3910,5 @@
     </script>
 </body>
 </html>
+
 
