--- a/index.html
+++ b/index.html
@@ -3451,7 +3451,7 @@ em {
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
                     <div class="about-image animate-fade-in-left">
                         <div class="relative rounded-2xl overflow-hidden shadow-2xl">
-                            <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" 
+                            <img src="Skyline_012-1024x682.jpg" 
                                  alt="S-Tech Team" 
                                  class="w-full h-64 md:h-80 object-cover">
                             <div class="absolute inset-0 bg-gradient-to-t from-dark/80 to-transparent"></div>
@@ -3801,7 +3801,7 @@ em {
             <div class="projects-grid">
                 <div class="project-card animate-fade-in-up">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="MG_20240222_154950_958.jpg" 
                              alt="Digital Literacy Program">
                         <div class="project-badge">In Progress</div>
                     </div>
@@ -3825,7 +3825,7 @@ em {
                 
                 <div class="project-card animate-fade-in-up" style="animation-delay: 0.1s">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="polymath.png" 
                              alt="POLYMATH EDUCATION NETWORK">
                         <div class="project-badge">In Progress</div>
                     </div>
@@ -3849,7 +3849,7 @@ em {
                 
                 <div class="project-card animate-fade-in-up" style="animation-delay: 0.2s">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="1072190_2_1112-computer-science-ed_standard.jpg" 
                              alt="BUILDORA Social">
                         <div class="project-badge">In Progress</div>
                     </div>
@@ -5568,6 +5568,7 @@ em {
     </script>
 </body>
 </html>
+
 
 
 
