--- a/index.html
+++ b/index.html
@@ -3842,7 +3842,7 @@ em {
                                 </div>
                                 <div class="project-percentage">45% Complete</div>
                             </div>
-                            <a href="#" class="btn btn-sm btn-outline">Learn More</a>
+                            <a href="https://ppolymath-eduction-network.vercel.app/#resources" class="btn btn-sm btn-outline">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -5568,6 +5568,7 @@ em {
     </script>
 </body>
 </html>
+
 
 
 
