--- a/index.html
+++ b/index.html
@@ -3801,7 +3801,7 @@ em {
             <div class="projects-grid">
                 <div class="project-card animate-fade-in-up">
                     <div class="project-image">
-                        <img src="MG_20240222_154950_958.jpg" 
+                        <img src="IMG_20240222_154950_958.jpg" 
                              alt="Digital Literacy Program">
                         <div class="project-badge">In Progress</div>
                     </div>
@@ -5568,6 +5568,7 @@ em {
     </script>
 </body>
 </html>
+
 
 
 
